styles 目录放至 data；自动更新移至开发者模式

--- a/settings.html
+++ b/settings.html
@@ -1,12 +1,12 @@
 <section class="main-settings">
-    <h1>测试开关</h1>
+    <h1>调试</h1>
     <div class="wrap">
         <div class="vertical-list-item">
             <div>
-                <h2>是否启用</h2>
-                <span class="secondary-text">在当前页面 (设置页) 临时启用/禁用所有 CSS 片段</span>
+                <h2>开发者模式</h2>
+                <span class="secondary-text">监听文件目录，实现本地修改 CSS 后自动更新（可能造成性能损失）</span>
             </div>
-            <div class="q-switch is-active" id="transitio-enable">
+            <div class="q-switch" id="transitio-dev">
                 <span class="q-switch__handle"></span>
             </div>
         </div>
