手动重载样式

--- a/settings.html
+++ b/settings.html
@@ -3,8 +3,8 @@
     <div class="wrap">
         <div class="vertical-list-item">
             <div>
-                <h2>开发者模式</h2>
-                <span class="secondary-text">监听文件目录，实现本地修改 CSS 后自动更新（可能造成性能损失）</span>
+                <h2 id="transitio-reload" title="双击以立即重载样式">开发者模式</h2>
+                <span class="secondary-text">监听文件目录，本地修改 CSS 后自动重载所有样式（可能造成性能损失）</span>
             </div>
             <div class="q-switch" id="transitio-dev">
                 <span class="q-switch__handle"></span>
