--- a/settings.html
+++ b/settings.html
@@ -15,6 +15,12 @@
 <section class="snippets">
     <h1>CSS 片段列表</h1>
     <div class="wrap">
-        <div class="vertical-list-item">将 CSS 文件拖至此处以添加 (WIP)</div>
+        <div class="vertical-list-item">
+            <div>
+                <h2>导入 CSS...</h2>
+                <span class="secondary-text" title="你可以点击按钮来选择，也可以将文件文件拖入右侧区域" style="cursor: help;">导入自定义的 CSS 片段</span>
+            </div>
+            <input id="transitio-import" type="file" accept=".css" multiple/>
+        </div>
     </div>
 </section>
