--- a/settings.html
+++ b/settings.html
@@ -24,17 +24,27 @@
     <div class="wrap">
         <div class="vertical-list-item">
             <div>
-                <h2 id="transitio-reload" title="双击以立即重载样式">开发者模式</h2>
+                <h2>开发者模式</h2>
                 <span class="secondary-text">监听文件目录，本地修改 CSS 后自动重载所有样式（可能造成性能损失）</span>
             </div>
             <div class="q-switch" id="transitio-dev">
                 <span class="q-switch__handle"></span>
             </div>
         </div>
+        <hr class="horizontal-dividing-line">
+        <div class="vertical-list-item">
+            <div>
+                <h2>打开样式目录</h2>
+                <span class="secondary-text">点击以打开存放样式的目录</span>
+            </div>
+            <div class="ops-btns">
+                <button class="q-button q-button--small q-button--secondary" id="transitio-open-folder">打开目录</button>
+            </div>
+        </div>
     </div>
 </section>
 <section class="snippets">
-    <h1>CSS 片段列表</h1>
+    <h1 id="transitio-reload" title="双击以立即重载样式">CSS 片段列表</h1>
     <div class="wrap">
         <div class="vertical-list-item">
             <div>
@@ -42,6 +52,30 @@
                 <span class="secondary-text" title="你可以点击按钮来选择，也可以将文件文件拖入右侧区域" style="cursor: help;">导入自定义的 CSS 片段</span>
             </div>
             <input id="transitio-import" type="file" accept="text/css" multiple/>
+        </div>
+    </div>
+</section>
+<section class="about">
+    <h1>关于</h1>
+    <div class="wrap">
+        <div class="vertical-list-item">
+            <div>
+                <h2>插件版本</h2>
+                <span class="secondary-text" id="transitio-version">NaN</span>
+            </div>
+            <div class="ops-btns">
+                <button class="q-button q-button--small q-button--secondary transitio-link" data-transitio-url="https://github.com/PRO-2684/transitio">打开项目主页</button>
+            </div>
+        </div>
+        <hr class="horizontal-dividing-line">
+        <div class="vertical-list-item">
+            <div>
+                <h2>作者</h2>
+                <span class="secondary-text" id="transitio-version">PRO-2684</span>
+            </div>
+            <div class="ops-btns">
+                <button class="q-button q-button--small q-button--secondary transitio-link" data-transitio-url="https://github.com/PRO-2684/">打开作者主页</button>
+            </div>
         </div>
     </div>
 </section>
