--- a/settings.html
+++ b/settings.html
@@ -49,7 +49,7 @@
         <div class="vertical-list-item">
             <div>
                 <h2>导入 CSS...</h2>
-                <span class="secondary-text" title="你可以点击按钮来选择，也可以将文件文件拖入右侧区域" style="cursor: help;">导入自定义的 CSS 片段</span>
+                <span class="secondary-text" title="你可以点击按钮来选择，也可以将样式文件拖入右侧区域" style="cursor: help;">导入自定义的 CSS 片段</span>
             </div>
             <input id="transitio-import" type="file" accept="text/css" multiple/>
         </div>
