添加用户 CSS 片段列表的链接

--- a/settings.html
+++ b/settings.html
@@ -56,7 +56,8 @@
         <div class="vertical-list-item">
             <div>
                 <h2>导入 CSS...</h2>
-                <span class="secondary-text" title="你可以点击按钮来选择，也可以将样式文件拖入右侧区域" style="cursor: help;">导入自定义的 CSS 片段</span>
+                <span class="secondary-text">导入自定义的 CSS 片段，或查看<a class="transitio-link" href="javascript:void(0);"style="color: inherit; cursor: pointer; font-style: italic;"
+                    data-transitio-url="https://github.com/PRO-2684/transitio#%E7%94%A8%E6%88%B7-css-%E7%89%87%E6%AE%B5">用户 CSS 片段列表</a></span>
             </div>
             <input id="transitio-import" type="file" accept="text/css" multiple/>
         </div>
