--- a/settings.html
+++ b/settings.html
@@ -1,5 +1,6 @@
 <style id="-transitio-style-settings">
     /* 设置界面用到的 CSS */
+    /* 文件选择框 */
     .transitio input[type="file"] {
         border-color: var(--fill_standard_primary);
         border-style: dashed;
@@ -21,6 +22,7 @@
     .transitio input[type="file"]::file-selector-button:hover {
         background-color: var(--overlay_hover);
     }
+    /* 各个 CSS 片段 */
     .transitio div.vertical-list-item.is-loading {
         cursor: progress;
     }
@@ -28,8 +30,24 @@
         pointer-events: none;
         opacity: 0.6;
     }
+    /* 关于 */
+    .transitio .about .wrap {
+        display: flex;
+        justify-content: space-between;
+        padding: 16px 0px;
+    }
+    .transitio .about .wrap > div {
+        flex: 1;
+        margin: 0px 10px;
+        border-radius: 8px;
+        text-align: center;
+    }
+    /* 链接 */
+    .transitio .transitio-link {
+        cursor: pointer;
+    }
 </style>
-<section class="main-settings">
+<section class="dev">
     <h1>调试</h1>
     <div class="wrap">
         <div class="vertical-list-item">
@@ -59,10 +77,9 @@
         <div class="vertical-list-item">
             <div>
                 <h2>导入 CSS...</h2>
-                <span class="secondary-text">导入自定义的 CSS 片段，或查看<a class="transitio-link" href="javascript:void(0);"
+                <span class="secondary-text">导入自定义的 CSS 片段，或查看<a class="transitio-link"
                     style="color: inherit; cursor: pointer; font-style: italic;"
-                    data-transitio-url="https://github.com/PRO-2684/transitio#%E7%94%A8%E6%88%B7-css-%E7%89%87%E6%AE%B5"
-                    title="https://github.com/PRO-2684/transitio#用户-css-片段">用户 CSS 片段列表</a></span>
+                    data-transitio-url="https://github.com/PRO-2684/transitio#用户-css-片段">用户 CSS 片段列表</a></span>
             </div>
             <input id="transitio-import" type="file" accept="text/css" multiple />
         </div>
@@ -71,23 +88,17 @@
 <section class="about">
     <h1>关于</h1>
     <div class="wrap">
-        <div class="vertical-list-item">
+        <div class="plugin-version">
             <div>
                 <h2>插件版本</h2>
-                <span class="secondary-text" id="transitio-version">NaN</span>
-            </div>
-            <div class="ops-btns">
-                <button class="q-button q-button--small q-button--secondary transitio-link" data-transitio-url="https://github.com/PRO-2684/transitio">打开项目主页</button>
+                <p class="secondary-text transitio-link" id="transitio-version" data-transitio-url="https://github.com/PRO-2684/transitio">NaN</p>
             </div>
         </div>
-        <hr class="horizontal-dividing-line">
-        <div class="vertical-list-item">
+        <hr class="vertical-dividing-line">
+        <div class="author">
             <div>
                 <h2>作者</h2>
-                <span class="secondary-text" id="transitio-version">PRO-2684</span>
-            </div>
-            <div class="ops-btns">
-                <button class="q-button q-button--small q-button--secondary transitio-link" data-transitio-url="https://github.com/PRO-2684/">打开作者主页</button>
+                <p class="secondary-text transitio-link" data-transitio-url="https://github.com/PRO-2684/">PRO-2684</p>
             </div>
         </div>
     </div>
