--- a/settings.html
+++ b/settings.html
@@ -107,5 +107,19 @@
                 <p class="secondary-text transitio-link" data-transitio-url="https://github.com/PRO-2684/">PRO-2684</p>
             </div>
         </div>
+        <hr class="vertical-dividing-line">
+        <div class="issues">
+            <div>
+                <h2>问题反馈</h2>
+                <p class="secondary-text transitio-link" data-transitio-url="https://github.com/PRO-2684/transitio/issues">GitHub Issues</p>
+            </div>
+        </div>
+        <hr class="vertical-dividing-line">
+        <div class="submit-css">
+            <div>
+                <h2>投稿</h2>
+                <p class="secondary-text transitio-link" data-transitio-url="https://github.com/PRO-2684/transitio/issues/4">提交您的 CSS 片段</p>
+            </div>
+        </div>
     </div>
 </section>
