--- a/settings.html
+++ b/settings.html
@@ -83,9 +83,9 @@
         <div class="vertical-list-item">
             <div>
                 <h2>导入 CSS...</h2>
-                <span class="secondary-text">导入自定义的 CSS 片段，或查看<a class="transitio-link"
+                <span class="secondary-text">导入自定义的 CSS 片段，或查看<span class="transitio-link"
                     style="font-style: italic;"
-                    data-transitio-url="https://github.com/PRO-2684/transitio#用户-css-片段">用户 CSS 片段列表</a></span>
+                    data-transitio-url="https://github.com/PRO-2684/transitio#用户-css-片段">用户 CSS 片段列表</span></span>
             </div>
             <input id="transitio-import" type="file" accept="text/css" multiple />
         </div>
