--- a/settings.html
+++ b/settings.html
@@ -41,6 +41,9 @@
         margin: 0px 10px;
         border-radius: 8px;
         text-align: center;
+        background-repeat: no-repeat;
+        background-size: 1.8em;
+        background-position: left;
     }
     /* 链接 */
     .transitio .transitio-link {
@@ -94,31 +97,31 @@
 <section class="about">
     <h1>关于</h1>
     <div class="wrap">
-        <div class="plugin-version">
+        <div id="transitio-about-version">
             <div>
-                <h2>插件版本</h2>
+                <h2>版本</h2>
                 <p class="secondary-text transitio-link" id="transitio-version" data-transitio-url="https://github.com/PRO-2684/transitio">NaN</p>
             </div>
         </div>
         <hr class="vertical-dividing-line">
-        <div class="author">
+        <div id="transitio-about-author">
             <div>
                 <h2>作者</h2>
                 <p class="secondary-text transitio-link" data-transitio-url="https://github.com/PRO-2684/">PRO-2684</p>
             </div>
         </div>
         <hr class="vertical-dividing-line">
-        <div class="issues">
+        <div id="transitio-about-issues">
             <div>
-                <h2>问题反馈</h2>
+                <h2>反馈</h2>
                 <p class="secondary-text transitio-link" data-transitio-url="https://github.com/PRO-2684/transitio/issues">GitHub Issues</p>
             </div>
         </div>
         <hr class="vertical-dividing-line">
-        <div class="submit-css">
+        <div id="transitio-about-submit">
             <div>
                 <h2>投稿</h2>
-                <p class="secondary-text transitio-link" data-transitio-url="https://github.com/PRO-2684/transitio/issues/4">提交您的 CSS 片段</p>
+                <p class="secondary-text transitio-link" data-transitio-url="https://github.com/PRO-2684/transitio/issues/4">提交您的片段</p>
             </div>
         </div>
     </div>
