新增：调试参数

--- a/settings.html
+++ b/settings.html
@@ -57,7 +57,7 @@
     }
 </style>
 <section class="dev">
-    <h1>调试</h1>
+    <h1 id="transitio-debug">调试</h1>
     <div class="wrap">
         <div class="vertical-list-item">
             <div>
