Open PluginStore in transitio settings

--- a/settings.html
+++ b/settings.html
@@ -89,7 +89,7 @@
                 <div>
                     <setting-text id="transitio-reload" title="双击以立即重载样式">导入 CSS...</setting-text>
                     <setting-text data-type="secondary">导入自定义的 CSS 片段，或查看<span class="transitio-link"
-                            style="font-style: italic;"
+                            id="transitio-snippets" style="font-style: italic;"
                             data-transitio-url="https://github.com/PRO-2684/transitio#-用户-css-片段">用户 CSS
                             片段列表</span></setting-text>
                 </div>
