--- a/settings.html
+++ b/settings.html
@@ -46,8 +46,8 @@
         border-radius: 8px;
         text-align: center;
         background-repeat: no-repeat;
-        background-size: 1.8em;
-        background-position: left;
+        background-size: 3em;
+        background-position: center;
     }
 
     /* 链接 */
