Background animation & more transparent

--- a/settings.html
+++ b/settings.html
@@ -49,7 +49,12 @@
         background-size: 3em;
         background-position: center;
     }
-
+    
+    .transitio .about setting-item:hover {
+        background-size: 2em;
+        background-position: left;
+    }
+    
     /* 链接 */
     .transitio .transitio-link {
         cursor: pointer;
