--- a/settings.html
+++ b/settings.html
@@ -6,6 +6,7 @@
         border-style: dashed;
         border-radius: 0.5em;
         padding: 0.5em;
+        transition: border-color 0.2s ease-in-out;
 
         &:focus,
         &:hover {
@@ -28,7 +29,6 @@
         }
     }
 
-
     /* 各个 CSS 片段 */
     .transitio setting-item.is-loading {
         cursor: progress;
@@ -50,6 +50,7 @@
         background-repeat: no-repeat;
         background-size: 3em;
         background-position: center;
+        transition: background 0.2s ease-in-out;
 
         &:hover {
             background-size: 2em;
@@ -76,6 +77,7 @@
         top: 40px;
         width: 4em;
         height: 4em;
+        z-index: 9999;
 
         &:hover {
             animation: magic 4s;
