--- a/settings.html
+++ b/settings.html
@@ -85,6 +85,18 @@
             opacity: 1;
             animation: 4s magic 0.2s;
         }
+
+    }
+
+    /* Easter egg */
+    .setting-title.lumos::after {
+        content: " 🌟 Lumos!";
+        opacity: 0.5;
+    }
+
+    .setting-title.nox::after {
+        content: " 🌙 Nox!";
+        opacity: 0.5;
     }
 
     /* 动画 - Adapted from https://codepen.io/averyhw/pen/xyxKjO/ */
