--- a/settings.html
+++ b/settings.html
@@ -90,12 +90,14 @@
 
     /* Easter egg */
     .setting-title.lumos::after {
-        content: " 🌟 Lumos!";
+        content: "🌟 Lumos!";
+        padding-left: 1em;
         opacity: 0.5;
     }
 
     .setting-title.nox::after {
-        content: " 🌙 Nox!";
+        content: "🌙 Nox!";
+        padding-left: 1em;
         opacity: 0.5;
     }
 
