重构 `transitio.open`; 允许 `在文件夹中显示`

--- a/settings.html
+++ b/settings.html
@@ -70,6 +70,32 @@
         }
     }
 
+    /* 菜单 */
+    .transitio .transitio-menu {
+        margin-left: 1em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 1em;
+    }
+
+    /* 悬浮显示的按钮 */
+    .transitio .transitio-more {
+        width: 1.5em;
+        height: 1.5em;
+        color: var(--icon_secondary);
+        opacity: 0;
+        transition: color 0.2s ease-in-out, opacity 0.2s ease-in-out;
+
+        &:hover {
+            color: var(--theme-color);
+        }
+    }
+
+    .transitio setting-item:hover .transitio-more {
+        opacity: 1;
+    }
+
     /* Logo */
     .transitio .logo {
         position: fixed;
