Disable logo background (temp workaround against mspring_theme)

--- a/settings.html
+++ b/settings.html
@@ -106,6 +106,7 @@
         z-index: 9999;
         opacity: 0;
         transition: opacity 0.2s ease-in-out;
+        background: none !important;
 
         &:hover {
             opacity: 1;
