Better `setting-item` logic; Better animation

--- a/settings.html
+++ b/settings.html
@@ -44,8 +44,12 @@
 
         &[data-deleted] {
             filter: grayscale(1);
-            pointer-events: none;
             opacity: 0.6;
+            cursor: not-allowed;
+
+            & > * {
+                pointer-events: none;
+            }
         }
     }
 
@@ -93,15 +97,16 @@
         height: 1.5em;
         color: var(--icon_secondary);
         opacity: 0;
-        transition: color 0.2s ease-in-out, opacity 0.2s ease-in-out;
+        transition: color 0.2s ease-in-out, opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
         font-family: system-ui, PingFang SC, PingFangSC-Regular, Microsoft YaHei, Hiragino Sans GB, Heiti SC, WenQuanYi Micro Hei, sans-serif, Apple Braille;
 
         &:hover {
             color: var(--theme-color);
+            transform: scale(1.2);
         }
     }
 
-    .transitio setting-item:hover .transitio-more {
+    .transitio setting-item:not([data-deleted]):hover .transitio-more {
         opacity: 1;
     }
 
